// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdjustmentSource resolver adjustmentOperations, type = promotion 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "percentage",
          "type": "percentage",
          "value": null,
        },
      ],
      "code": "promo_action",
      "description": "description for promo_action",
      "type": "PROMOTION",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": null,
        },
      ],
      "code": "promo_condition",
      "description": "description for promo_condition",
      "type": "PROMOTION",
    },
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": null,
        },
      ],
      "code": "promo_condition2",
      "description": "description for promo_condition2",
      "type": "PROMOTION",
    },
  ],
}
`;

exports[`AdjustmentSource resolver adjustmentOperations, type = shipping 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "percentage",
          "type": "percentage",
          "value": null,
        },
      ],
      "code": "shipping_action",
      "description": "description for shipping_action",
      "type": "SHIPPING",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": null,
        },
      ],
      "code": "shipping_condition",
      "description": "description for shipping_condition",
      "type": "SHIPPING",
    },
  ],
}
`;

exports[`AdjustmentSource resolver adjustmentOperations, type = tax 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "percentage",
          "type": "percentage",
          "value": null,
        },
      ],
      "code": "tax_action",
      "description": "description for tax_action",
      "type": "TAX",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": null,
        },
      ],
      "code": "tax_condition",
      "description": "description for tax_condition",
      "type": "TAX",
    },
  ],
}
`;

exports[`AdjustmentSource resolver createAdjustmentSource promotion 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "percentage",
          "type": "percentage",
          "value": "50",
        },
      ],
      "code": "promo_action",
      "description": "description for promo_action",
      "type": "PROMOTION",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": "500",
        },
      ],
      "code": "promo_condition",
      "description": "description for promo_condition",
      "type": "PROMOTION",
    },
  ],
  "enabled": true,
  "name": "promo adjustment source",
  "type": "PROMOTION",
}
`;

exports[`AdjustmentSource resolver createAdjustmentSource shipping 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "percentage",
          "type": "percentage",
          "value": "50",
        },
      ],
      "code": "shipping_action",
      "description": "description for shipping_action",
      "type": "SHIPPING",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": "500",
        },
      ],
      "code": "shipping_condition",
      "description": "description for shipping_condition",
      "type": "SHIPPING",
    },
  ],
  "enabled": true,
  "name": "shipping adjustment source",
  "type": "SHIPPING",
}
`;

exports[`AdjustmentSource resolver createAdjustmentSource tax 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "percentage",
          "type": "percentage",
          "value": "50",
        },
      ],
      "code": "tax_action",
      "description": "description for tax_action",
      "type": "TAX",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": "500",
        },
      ],
      "code": "tax_condition",
      "description": "description for tax_condition",
      "type": "TAX",
    },
  ],
  "enabled": true,
  "name": "tax adjustment source",
  "type": "TAX",
}
`;

exports[`AdjustmentSource resolver updateAdjustmentSource 1`] = `
Object {
  "actions": Array [
    Object {
      "args": Array [
        Object {
          "name": "percentage",
          "type": "percentage",
          "value": "50",
        },
      ],
      "code": "promo_action",
      "description": "description for promo_action",
      "type": "PROMOTION",
    },
  ],
  "conditions": Array [
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": "90",
        },
      ],
      "code": "promo_condition",
      "description": "description for promo_condition",
      "type": "PROMOTION",
    },
    Object {
      "args": Array [
        Object {
          "name": "arg",
          "type": "money",
          "value": "10",
        },
      ],
      "code": "promo_condition2",
      "description": "description for promo_condition2",
      "type": "PROMOTION",
    },
  ],
  "enabled": true,
  "name": "promo adjustment source",
  "type": "PROMOTION",
}
`;
